# scala-python

./: .gitignore  build.sbt  pyproject.toml
src/main/scala/: Langchain.scala  Main.scala
