[tool.poetry]
name = "scala-python"
version = "0.1.0"
description = ""
authors = ["David Illing <dilling123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.10"
langchain-openai = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
